# PalmBee

./: README.md  TODO.md  TODOs.md
pb_control/: CMakeLists.txt  package.xml
pb_control/orbital_motion/: CMakeLists.txt  circle.cpp  forward.py  landing.py  local_plan.py  offboard_control.py
pb_control/scripts/: control_manager.py  motion_controller_node.py  tracking_control.py  tracking_control_example.py
pb_control/src/: cpp_node.cpp
pb_interface/: CMakeLists.txt  package.xml
pb_interface/src/: cpp_node.cpp
pb_manager/: CMakeLists.txt  package.xml
pb_manager/scripts/: mission_manager.py
pb_manager/src/: cpp_node.cpp
pb_perception/: CMakeLists.txt  package.xml
pb_perception/config/: zed2i.yaml  zed2i_custom.yaml  zed2i_custom_default.yaml
pb_perception/database/: test.csv  test.db
pb_perception/launch/: pb_perception_launch.py  rs_apriltag_launch.py  rs_cam_launch.py  rs_slam_launch.py  system_tf_publisher_launch.py  zed_apriltag_launch.py  zed_camera.launch.py  zed_odom_tf_publisher_launch.py  zed_rgbd_slam_launch.py  zed_stereo_launch.py  zed_stereo_slam_launch.py  zed_tf_publisher_launch.py
pb_perception/notebook/: modify_db.ipynb
pb_perception/pb_perception/: palmtree_db.py
pb_perception/scripts/: call_request_position_service.py  detect_object.py  get_markers.py  publish_tree_position.py  publish_visual_odometry.py  retrieve_database.py  sensing_manager.py  subscribe_position.py  update_database.py
pb_perception/src/: cpp_node.cpp
pb_sprayer/: CMakeLists.txt  package.xml
pb_sprayer/src/: cpp_node.cpp
pb_utility/: CMakeLists.txt  package.xml
pb_utility/notes/: Next_step.md
pb_utility/scripts/: rtabmap_slam2.txt
pb_utility/scripts/conversion/: bag2text.py  db2txt.py  topic2txt.py
pb_utility/scripts/plot/: plot_rtabmap.ipynb  poses01.txt  poses03.txt  poses04.txt  rec2_rtabmap_slam.txt  rtabmap_slam.txt
pb_utility/scripts/plot/Mamuang_21032025/rec01/: Mar-21st-2025 03.57PM (Flight 1).csv  detected_markers_2103-01.csv  poses2103-01a.txt  poses2103-01b.txt
pb_utility/scripts/plot/Mamuang_21032025/rec02/: Mar-21st-2025 04.30PM (Flight 2).csv  poses2103-02a.txt  poses2103-02b.txt
pb_utility/scripts/plot/Mamuang_21032025/rec03/: Mar-21st-2025 04.45PM (Flight 3).csv  poses2103-03.txt
pb_utility/scripts/plot/cikole/: poses01.txt
pb_utility/scripts/plot/corridor_STEI/: poses01.txt
pb_utility/scripts/plot/corridor_bdg/: poses02.txt  poses05.txt
pb_utility/scripts/plot/corridor_pares/: poses01.txt
pb_utility/scripts/plot/rec_20250314/: detected_markers.csv
pb_utility/scripts/plot/rec_20250315/: poses15_01.g2o  poses15_01.txt  poses15_02_loop.txt  poses15_02_no-loop.txt  poses15_03_loop.txt  poses15_03_loop3.txt  poses15_03_loop3_camera.txt  poses15_03_no-loop.txt  poses15_04.txt  poses15_04a.txt  poses15_04b.txt
pb_utility/scripts/plot/road_ITB_Pares/: poses001.txt  poses002.txt
pb_utility/scripts/plot/sawit/: poses01.txt  poses02.txt  poses03.txt  rtabmap_slam_01.txt  rtabmap_slam_02.txt  rtabmap_slam_03.txt
pb_utility/src/: cpp_node.cpp
pb_utility/temp/: poses2805_01.txt  poses2805_02.txt
